Finaliza terceiro notebook de limpeza e filtro de dados

--- a/02 - Reshaping e Pivoting de Dados.ipynb
+++ b/02 - Reshaping e Pivoting de Dados.ipynb
@@ -21,9 +21,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib as plt\n",
-    "%matplotlib inline"
+    "import numpy as np"
    ]
   },
   {
